--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -33,10 +33,10 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </a>
-          <a class="brand" href="#">CodeBlue</a>
+          <a class="brand" href="{{ url_for('index') }}">CodeBlue</a>
           <div class="nav-collapse collapse">
             <ul class="nav">
-              <li class="active"><a href="#">Home</a></li>
+              <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
               <li><a href="#about">About</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
@@ -53,10 +53,11 @@
               </li>
             </ul>
             <form class="navbar-form pull-right">
-              <input class="span2" type="text" placeholder="Email" autofocus>
-              <input class="span2" type="password" placeholder="Password">
+              <input class="span2" type="text" placeholder="Email" name="username" autofocus>
+              <input class="span2" type="password" placeholder="Password" name="password">
               <button type="submit" class="btn">Sign in</button>
-              <button type="submig" class="btn">Sign up</button>
+              <br>
+              <a href="/user/new">New user? Sign up here.</a>
             </form>
           </div><!--/.nav-collapse -->
         </div>
