--- a/flask_app/web_package/templates/post_new.html
+++ b/flask_app/web_package/templates/post_new.html
@@ -16,7 +16,7 @@
 				<label>Title</label>
 				<input type="text" name="title">
 				<label>Text</label>
-				<input type="text" name="post_text">
+				<input type="text" name="body">
 				<br>
 				<input type="submit" class="btn" value="Post"></input>
 			</form>
