--- a/flask_app/web_package/templates/post_show.html
+++ b/flask_app/web_package/templates/post_show.html
@@ -2,15 +2,15 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>CodeBlue--View Post</title>
+		<title>CodeBlue--Show Post</title>
 
 		<link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
 		<link rel="stylsheet" href="{{url_for('static', filename='bootstrap/css/bootstrap-responsive.css')}}">
 	</head>
 
 	<body>
-		<h1>Post: {{}}</h1>
-		<p>{{}}</p>
+		<h1>Post: {{post.title}}</h1>
+		<p>{{post.body}}</p>
 
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
