--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -52,7 +52,7 @@
                 </ul>
               </li>
             </ul>
-            <form class="navbar-form pull-right">
+            <form class="navbar-form pull-right" action="{{ url_for('user_login') }}" method="POST">
               <input class="span2" type="text" placeholder="Email" name="username" autofocus>
               <input class="span2" type="password" placeholder="Password" name="password">
               <button type="submit" class="btn">Sign in</button>
