Added login/logout support. Refactored some code for user login/creation into utils.

--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -37,7 +37,7 @@
           <div class="nav-collapse collapse">
             <ul class="nav">
               <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
-              <li><a href="#about">About</a></li>
+              <li><a href="{{ url_for('post_new') }}">New Post</a></li>
               <li><a href="#contact">Contact</a></li>
               <li class="dropdown">
                 <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
@@ -52,13 +52,20 @@
                 </ul>
               </li>
             </ul>
-            <form class="navbar-form pull-right" action="{{ url_for('user_login') }}" method="POST">
-              <input class="span2" type="text" placeholder="Email" name="username" autofocus>
-              <input class="span2" type="password" placeholder="Password" name="password">
-              <button type="submit" class="btn">Sign in</button>
-              <br>
-              <a href="/user/new">New user? Sign up here.</a>
-            </form>
+            {% if not session['logged_in'] %}
+              <form class="navbar-form pull-right" action="{{ url_for('user_login') }}" method="POST">
+                <input class="span2" type="text" placeholder="Email" name="username" autofocus>
+                <input class="span2" type="password" placeholder="Password" name="password">
+                <button type="submit" class="btn">Sign in</button>
+                <br>
+                <a href="/user/new">New user? Sign up here.</a>
+              </form>
+            {% else %}
+              <form class="navbar-form pull-right" action="{{ url_for('user_logout') }}">
+                <button type="submit" class="btn">Log out</button>
+              </form>
+              <h4 class="welcome pull-right">Welcome, <a href="{{ url_for('user_profile', username=session['username']) }}">{{ session['username'] }}</a></h4>
+            {% endif %}
           </div><!--/.nav-collapse -->
         </div>
       </div>
