--- a/flask_app/web_package/templates/post_new.html
+++ b/flask_app/web_package/templates/post_new.html
@@ -16,8 +16,15 @@
 				<label>Title</label>
 				<input type="text" name="title">
 				<label>Text</label>
-				<input type="text" name="body">
-				<br>
+				<input type="text" name="body"><br>
+				<fieldset>
+					<legend>Duration:</legend>
+					<input type="radio" name="tdelta" value="3h">3 Hours<br>
+					<input type="radio" name="tdelta" value="6h">6 Hours<br>
+					<input type="radio" name="tdelta" value="12h">12 Hours<br>
+					<input type="radio" name="tdelta" value="1d">1 Day<br>
+					<input type="radio" name="tdelta" value="3d">3 Days<br>
+				</fieldset>
 				<input type="submit" class="btn" value="Post"></input>
 			</form>
 		</div>
