Created Geolocation templates. Work on browser geolocation

--- a/flask_app/web_package/templates/geolocation_new.html
+++ b/flask_app/web_package/templates/geolocation_new.html
@@ -2,7 +2,7 @@
 <html lang="en">
 	<head>
 		<meta charset="utf-8">
-		<title>CodeBlue--New Post</title>
+		<title>CodeBlue--New Location</title>
 
 		<link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
 		<link rel="stylsheet" href="{{url_for('static', filename='bootstrap/css/bootstrap-responsive.css')}}">
@@ -11,25 +11,20 @@
 	<body>
 
 		<div class="container">
-			<form action="/post/create" method="POST">
-				<legend>Create a Post</legend>
-				<label>Title</label>
-				<input type="text" name="title">
-				<label>Text</label>
-				<input type="text" name="body"><br>
-				<fieldset>
-					<legend>Duration:</legend>
-					<input type="radio" name="tdelta" value="3h">3 Hours<br>
-					<input type="radio" name="tdelta" value="6h">6 Hours<br>
-					<input type="radio" name="tdelta" value="12h">12 Hours<br>
-					<input type="radio" name="tdelta" value="1d">1 Day<br>
-					<input type="radio" name="tdelta" value="3d">3 Days<br>
-				</fieldset>
-				<input type="submit" class="btn" value="Post"></input>
+			<form action="/location/create" method="POST">
+				<legend>Specify a Location</legend>
+				<label>Latitude</label>
+				<input type="number" name="latitude" step="any">
+				<label>Longitude</label>
+				<input type="number" name="longitude" step="any"><br>
+				<label>Elevation</label>
+				<input type="number" name="elevation" step="any"><br>
+				<input type="submit" class="btn" value="Pin It"></input>
 			</form>
 		</div>
 
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
 		<script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
+		<script src="{{url_for('static', filename='geotest.js')}}"></script>
 	</body>
 </html>
