Updated query to include a join to select posts instead of locations.

--- a/flask_app/web_package/templates/nearby_posts.html
+++ b/flask_app/web_package/templates/nearby_posts.html
@@ -20,7 +20,7 @@
 		</div>
 		{% if posts %}
 		<div class="container">
-			<h2>Locations within {{ radius }} kilometers of {{ location }}</h2>
+			<h2>Posts within {{ radius }} kilometers of {{ location }}</h2>
 			<ul>
 			{% for loc in posts %}
 				<li>{{ loc[0] }} is {{ loc[1] }} kilometer(s) away</li>
