--- a/flask_app/web_package/templates/geolocation_show.html
+++ b/flask_app/web_package/templates/geolocation_show.html
@@ -9,6 +9,7 @@
 	</head>
 
 	<body>
+		{% include 'header.html' %}
 		<h1>Geolocation: {{geolocation}}</h1>
 		
 		<script src="http://code.jquery.com/jquery-latest.js"></script>
