--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -25,51 +25,7 @@
 
   <body>
 
-    <div class="navbar navbar-inverse navbar-fixed-top">
-      <div class="navbar-inner">
-        <div class="container">
-          <a class="btn btn-navbar" data-toggle="collapse" data-target=".nav-collapse">
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
-          </a>
-          <a class="brand" href="{{ url_for('index') }}">CodeBlue</a>
-          <div class="nav-collapse collapse">
-            <ul class="nav">
-              <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
-              <li><a href="{{ url_for('post_new') }}">New Post</a></li>
-              <li><a href="#contact">Contact</a></li>
-              <li class="dropdown">
-                <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
-                <ul class="dropdown-menu">
-                  <li><a href="#">Action</a></li>
-                  <li><a href="#">Another action</a></li>
-                  <li><a href="#">Something else here</a></li>
-                  <li class="divider"></li>
-                  <li class="nav-header">Nav header</li>
-                  <li><a href="#">Separated link</a></li>
-                  <li><a href="#">One more separated link</a></li>
-                </ul>
-              </li>
-            </ul>
-            {% if not session['logged_in'] %}
-              <form class="navbar-form pull-right" action="{{ url_for('user_login') }}" method="POST">
-                <input class="span2" type="text" placeholder="Email" name="username" autofocus>
-                <input class="span2" type="password" placeholder="Password" name="password">
-                <button type="submit" class="btn">Sign in</button>
-                <br>
-                <a href="/user/new">New user? Sign up here.</a>
-              </form>
-            {% else %}
-              <form class="navbar-form pull-right" action="{{ url_for('user_logout') }}">
-                <button type="submit" class="btn">Log out</button>
-              </form>
-              <h4 class="welcome pull-right">Welcome, <a href="{{ url_for('user_profile', username=session['username']) }}">{{ session['username'] }}</a></h4>
-            {% endif %}
-          </div><!--/.nav-collapse -->
-        </div>
-      </div>
-    </div>
+    {% include 'header.html' %}
 
     <div class="container">
 
