--- a/flask_app/web_package/templates/header.html
+++ b/flask_app/web_package/templates/header.html
@@ -9,7 +9,7 @@
       <a class="brand" href="{{ url_for('index') }}">CodeBlue</a>
       <div class="nav-collapse collapse">
         <ul class="nav">
-          <li class="active"><a href="{{ url_for('index') }}">Home</a></li>
+          <li><a href="{{ url_for('index') }}">Home</a></li>
           <li><a href="{{ url_for('post_new') }}">New Post</a></li>
           <li><a href="{{ url_for('post_nearby') }}">View Posts</a></li>
           <li class="dropdown">
