--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -1,54 +1,22 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>CodeBlue</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
-    <meta name="author" content="">
+{% extends 'base.html' %}
+{% block title %}CodeBlue{% endblock %}
+{% block body %}
+  {{ super() }}
+  <div class="container">
 
-    <!-- Le styles -->
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
-    <link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <!-- Main hero unit for a primary marketing message or call to action -->
+    <div class="hero-unit">
+      <h1>Hello, world!</h1>
+      <p>CodeBlue is the placeholder name for our project, and hopefully it will do some cool stuff soon!</p>
+      <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    </div>
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
-  </head>
+    <hr>
 
-  <body>
+    <footer>
+      <p>&copy; Company 2012</p>
+    </footer>
 
-    {% include 'header.html' %}
+  </div> <!-- /container -->
 
-    <div class="container">
-
-      <!-- Main hero unit for a primary marketing message or call to action -->
-      <div class="hero-unit">
-        <h1>Hello, world!</h1>
-        <p>CodeBlue is the placeholder name for our project, and hopefully it will do some cool stuff soon!</p>
-        <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
-      </div>
-
-      <hr>
-
-      <footer>
-        <p>&copy; Company 2012</p>
-      </footer>
-
-    </div> <!-- /container -->
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.js"></script>
-
-  </body>
-</html>
+{% endblock %}
