--- a/flask_app/web_package/templates/user_profile.html
+++ b/flask_app/web_package/templates/user_profile.html
@@ -1,9 +1,15 @@
-{% include 'header.html' %}
-Welcome {{session['username']}}
+{% extends 'base.html' %}
+	{% block title %}CodeBlue -- {{ session['username'] }}{% endblock %}
 
-All your posts
-<ul>
-{% for post in posts %}
-	<li>Title: {{ post.title }} Body: {{ post.body }} is located at {{ post.geolocation }} and at elevation {{ post.geolocation.evlevation }}</li>
-{% endfor %}
-</ul>
+	{% block body %}
+		{{ super() }}
+
+		Welcome {{session['username']}}
+
+		All your posts
+		<ul>
+			{% for post in posts %}
+				<li>Title: {{ post.title }} Body: {{ post.body }} is located at {{ post.geolocation }} and at elevation {{ post.geolocation.elevation }}</li>
+			{% endfor %}
+		</ul>
+	{% endblock %}
