--- a/flask_app/web_package/templates/user_signup.html
+++ b/flask_app/web_package/templates/user_signup.html
@@ -1,30 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-	<head>
-		<meta charset="utf-8">
-		<title>CodeBlue--New User</title>
-		<meta name="viewport" content="width=device-width, initial-scale=1.0">
-		<meta name="description" content="">
-		<meta name="author" content="">
+{% extends 'base.html' %}
+	{% block title %}CodeBlue--New User{% endblock %}
 
-		<!-- Le styles -->
-		<link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
-		<style type="text/css">
-			body {
-				padding-top: 60px;
-				padding-bottom: 40px;
-			}
-		</style>
-		<link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
-
-		<!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
-		<!--[if lt IE 9]>
-			<script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-		<![endif]-->
-	</head>
-
-	<body>
-		{% include 'header.html' %}
+	{% block body %}
+		{{ super() }}
 
 		<div class="container">
 			<form action="/user/create" method="POST">
@@ -40,10 +18,4 @@
 			</form>
 		</div>
 
-		<!-- Le javascript
-		================================================== -->
-		<!-- Placed at the end of the document so the pages load faster -->
-		<script src="http://code.jquery.com/jquery-latest.js"></script>
-		<script src="../static/bootstrap/js/bootstrap.js"></script>
-	</body>
-</html>
+	{% endblock %}
