--- a/flask_app/web_package/templates/base.html
+++ b/flask_app/web_package/templates/base.html
@@ -1,40 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    {% block head %}
     <meta charset="utf-8">
+    <title>{% block title %} Default Title {% endblock %}</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <!-- Le styles -->
-    <link rel="stylesheet" href="../static/bootstrap/css/bootstrap.css">
+    {% block head_extra %}
+    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap.css')}}">
     <style type="text/css">
       body {
         padding-top: 60px;
         padding-bottom: 40px;
       }
     </style>
-    <link href="../static/bootstrap/css/bootstrap-responsive.css" rel="stylesheet">
+    <link rel="stylesheet" href="{{url_for('static', filename='bootstrap/css/bootstrap-responsive.css')}}">
+    {% endblock %}
 
-    <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
+    <!-- HTML5 Shims -->
     <!--[if lt IE 9]>
       <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
     <![endif]-->
-    {% endblock %}
+
   </head>
 
   <body>
+
     {% block body %}
-
-    {% include 'header.html' %}
-
-    <!-- Le javascript
-    ================================================== -->
-    <!-- Placed at the end of the document so the pages load faster -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="../static/bootstrap/js/bootstrap.js"></script>
-
+    {% include 'navbar.html' %}
     {% endblock %}
+
+    {% include 'footer.html' %}
+
+    <!-- Scripts -->
+    <script src="http://code.jquery.com/jquery-latest.js"></script>
+    <script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
+    {% block scripts_extra %}
+    {% endblock%}
+
   </body>
+  
 </html>
