--- a/flask_app/web_package/templates/user_profile.html
+++ b/flask_app/web_package/templates/user_profile.html
@@ -5,12 +5,11 @@
 
 	{% block body %}
 		{{ super() }}
-
 		Welcome {{ session['username'] }}<br>
 
-		All your posts
+		<p>All your posts:</p>
 		<ul>
-			{% for post in posts %}
+			{% for post in user.posts %}
 				<li>Title: {{ post.title }} Body: {{ post.body }} is located at {{ post.geolocation }} and at elevation {{ post.geolocation.elevation }}</li>
 			{% endfor %}
 		</ul>
