--- a/flask_app/web_package/templates/posting_view.html
+++ b/flask_app/web_package/templates/posting_view.html
@@ -4,7 +4,7 @@
 	{% block body %}
 		{{ super() }}
 
-		<h1>Post: {{post.title}}</h1>
-		<p>{{post.body}}</p>
+		<h1>Posting: {{posting.title}}</h1>
+		<p>{{posting.body}}</p>
 
 	{% endblock %}
