--- a/flask_app/web_package/templates/navbar.html
+++ b/flask_app/web_package/templates/navbar.html
@@ -10,8 +10,8 @@
       <div class="nav-collapse collapse">
         <ul class="nav">
           <li><a href="{{ url_for('index') }}">Home</a></li>
-          <li><a href="{{ url_for('post_new') }}">New Post</a></li>
-          <li><a href="{{ url_for('post_nearby') }}">View Posts</a></li>
+          <li><a href="{{ url_for('posting_new') }}">New Post</a></li>
+          <li><a href="{{ url_for('posting_nearby') }}">View Posts</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
             <ul class="dropdown-menu">
@@ -31,7 +31,7 @@
             <input class="span2" type="password" placeholder="Password" name="password">
             <button type="submit" class="btn">Sign in</button>
             <br>
-            <a href="/user/signup">New user? Sign up here.</a>
+            <a href="{{url_for('user_new')}}">New user? Sign up here.</a>
           </form>
         {% else %}
           <form class="navbar-form pull-right" action="{{ url_for('user_logout') }}">
