--- a/flask_app/web_package/templates/user_new.html
+++ b/flask_app/web_package/templates/user_new.html
@@ -5,7 +5,7 @@
 		{{ super() }}
 
 		<div class="container">
-			<form action="/user/create" method="POST">
+			<form action="{{url_for('user_new2')}}" method="POST">
 				<legend>Sign up for CodeBlue</legend>
 				<label>username</label>
 				<input type="text" name="username">
