--- a/flask_app/web_package/templates/user_new.html
+++ b/flask_app/web_package/templates/user_new.html
@@ -5,14 +5,14 @@
 		{{ super() }}
 
 		<div class="container">
-			<form action="{{url_for('user_new2')}}" method="POST">
+			<form action="{{url_for('user_new')}}" method="POST">
 				<legend>Sign up for CodeBlue</legend>
 				<label>username</label>
 				<input type="text" name="username">
 				<label>password</label>
 				<input type="password" name="password">
 				<label>repeat password</label>
-				<input type="password" name="repeat_password">
+				<input type="password" name="password_repeat">
 				<br>
 				<button type="submit" class="btn">Sign Up</button>
 			</form>
