User gelocations can now be updated again

--- a/flask_app/web_package/templates/user_geolocation.html
+++ b/flask_app/web_package/templates/user_geolocation.html
@@ -5,7 +5,7 @@
 		{{ super() }}
 
 		<div class="container">
-			<form action="/user/location" method="POST">
+			<form action="{{ url_for('user_geolocation', username = session['username']) }}" method="POST">
 				<legend>Specify a Location</legend>
 				<label>Latitude</label>
 				<input type="number" name="latitude" step="any">
