--- a/flask_app/web_package/templates/navbar.html
+++ b/flask_app/web_package/templates/navbar.html
@@ -11,6 +11,7 @@
         <ul class="nav">
           <li><a href="{{ url_for('index') }}">Home</a></li>
           <li><a href="{{ url_for('posting_new') }}">New Post</a></li>
+          <li><a href="{{ url_for('user_geolocation', username=session['username'])}}">Update Location</a></li>
           <li><a href="{{ url_for('posting_nearby') }}">View Posts</a></li>
           <li class="dropdown">
             <a href="#" class="dropdown-toggle" data-toggle="dropdown">Dropdown <b class="caret"></b></a>
