--- a/flask_app/web_package/templates/question_new.html
+++ b/flask_app/web_package/templates/question_new.html
@@ -7,7 +7,7 @@
 		<div class="container">
 			<form action="{{url_for('question_new')}}" method="POST">
 				<legend>Create a New Question</legend>
-				<label for="question_title">Title<label>
+				<label for="question_title">Title</label>
 				<input id="question_title" type="text" name="title">
 				<label for="question_query">Question</label>
 				<textarea id="question_query" name="query" rows="5" cols="25" placeholder="Please enter your question here"></textarea>
