--- a/flask_app/web_package/templates/question_view.html
+++ b/flask_app/web_package/templates/question_view.html
@@ -6,5 +6,39 @@
 
 		<h1>{{ question.title }}</h1>
 		<p>{{ question.text }}</p>
+		<p>Posted by {{ question.user }}</p>
+		<h2>Comments</h2>
+		{% for comment in question.comments %}
+			<p>{{ comment.text }}</p>
+			<p>{{ comment.user.username }}</p>
+		{% endfor %}
+
+
+		<h1>Answers</h1>
+		<div class="container">
+			<form action="{{url_for('answer_new')}}" method="POST">
+				<legend>Create a New Answer</legend>
+				<label for="answer_text">Your Answer</label>
+				<textarea id="answer_text" name="text" rows="5" cols="25" placeholder="Please enter your answer here"></textarea>
+				<input type="hidden" name="question_id" value={{ question.question_id }}>
+				<input type="submit" class="btn" value="Post"></input>
+			</form>
+		</div>
+
+		<ul>
+		{% for answer in question.answers %}
+			<li>
+				<p>{{ answer.text }}</p>
+				<p>Posted by {{ answer.user }}</p>
+				<p>Created at {{ answer.creation_time }}</p>
+			</li>
+			<h5>Comments</h5>
+			{% for comment in answer.comments %}
+				<p>{{ comment.text }}</p>
+				<p>{{ comment.user.username }}</p>
+			{% endfor %}
+		{% endfor %}
+		</ul>
+
 
 	{% endblock %}
