--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -2,6 +2,11 @@
 
 {% block title %} CodeBlue {% endblock %}
 
+{% block head_extra %}
+  {{ super() }}
+  <link rel="stylesheet" href="{{url_for('static', filename='css/')}}">
+{% endblock %}
+
 {% block body %}
   {{ super() }}
   
@@ -11,6 +16,17 @@
       <h1>Hello, world!</h1>
       <p>CodeBlue is the placeholder name for our project, and hopefully it will do some cool stuff soon!</p>
       <p><a class="btn btn-primary btn-large">Learn more &raquo;</a></p>
+    </div>
+
+    <div class="pull-right span4">
+      <form action="{{ url_for('user_login') }}" method="POST">
+        <input class="span2" type="text" placeholder="Email" name="username" autofocus>
+        <br>
+        <input class="span2" type="password" placeholder="Password" name="password">
+        <br>
+        <button type="submit" class="btn">Login</button>
+        <a href="{{url_for('user_new')}}" class="btn">Sign up</a>
+      </form>
     </div>
 
     <hr>
