--- a/flask_app/web_package/templates/user_view.html
+++ b/flask_app/web_package/templates/user_view.html
@@ -14,3 +14,10 @@
 			{% endfor %}
 		</ul>
 	{% endblock %}
+
+	{% block scripts_extra %}
+		<script src="{{url_for('static', filename='js/message_protocol.js')}}"></script>
+		<script src="{{url_for('static', filename='js/user_view.js')}}"></script>
+
+		<!--<script src="{{url_for('static', filename='js/geotest.js')}}"></script>-->
+	{% endblock %}
