Added SCRIPT_ROOT and simple AJAX call

--- a/flask_app/web_package/templates/user_view.html
+++ b/flask_app/web_package/templates/user_view.html
@@ -16,8 +16,8 @@
 	{% endblock %}
 
 	{% block scripts_extra %}
-		<script src="{{url_for('static', filename='js/message_protocol.js')}}"></script>
-		<script src="{{url_for('static', filename='js/user_view.js')}}"></script>
+		<script src="{{url_for('static', filename='js/message-protocol.js')}}"></script>
+		<script src="{{url_for('static', filename='js/user-view.js')}}"></script>
 
 		<!--<script src="{{url_for('static', filename='js/geotest.js')}}"></script>-->
 	{% endblock %}
