--- a/flask_app/web_package/templates/base.html
+++ b/flask_app/web_package/templates/base.html
@@ -36,6 +36,9 @@
     <!-- Scripts -->
     <script src="http://code.jquery.com/jquery-latest.js"></script>
     <script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
+    <script type="text/javascript">
+      SCRIPT_ROOT = {{ request.script_root|tojson|safe}};
+    </script>
     {% block scripts_extra %}
     {% endblock%}
 
