--- a/flask_app/web_package/templates/page_not_found.html
+++ b/flask_app/web_package/templates/page_not_found.html
@@ -6,7 +6,7 @@
   </head>
   <body>
     <h1>404 Page Not Found</h1>
-    <img src="{{url_for('static', filename='images/busy-beaver.jpg')}}" alt="404">
+    <img src="{{url_for('static', filename='img/busy-beaver.jpg')}}" alt="404">
 
   </body>
 </html>
