--- a/flask_app/web_package/templates/navbar.html
+++ b/flask_app/web_package/templates/navbar.html
@@ -33,7 +33,7 @@
           <form class="navbar-form pull-right" action="{{ url_for('user_logout') }}">
             <button type="submit" class="btn">Log out</button>
           </form>
-          <h4 class="welcome pull-right">Welcome, <a href="{{ url_for('user_view', username=session['username']) }}">{{ session['username'] }}</a></h4>
+          <h4 class="welcome pull-right">Welcome, <a href="{{ url_for('user_show', username=session['username']) }}">{{ session['username'] }}</a></h4>
         {% endif %}
       </div><!--/.nav-collapse -->
     </div>
