Fixed bug causing error when an unknown user tried to log in. Shows current public profile or personal profile depending on authentication status

--- a/flask_app/web_package/templates/user_show.html
+++ b/flask_app/web_package/templates/user_show.html
@@ -8,7 +8,7 @@
 		<br>
 		<br>
 		<br>
-		Viewing profile of {{ user.username }}<br>
+		Viewing Public Profile of {{ user.username }}<br>
 
 	{% endblock %}
 
