--- a/flask_app/web_package/templates/index.html
+++ b/flask_app/web_package/templates/index.html
@@ -30,6 +30,16 @@
       <a href="{{url_for('user_new')}}" class="btn">Sign up</a>
     </div>
 
+    {% with messages = get_flashed_messages() %}
+      {% if messages %}
+        <ul class=flashes>
+        {% for message in messages %}
+          <li>{{ message }}</li>
+        {% endfor %}
+        </ul>
+      {% endif %}
+    {% endwith %}
+
     <hr>
 
   </div> <!-- /container -->
