--- a/flask_app/web_package/templates/user_new.html
+++ b/flask_app/web_package/templates/user_new.html
@@ -18,4 +18,15 @@
 			</form>
 		</div>
 
+		{% with messages = get_flashed_messages() %}
+	      	{% if messages %}
+	        <ul class=flashes>
+	        	{% for message in messages %}
+	          	<li>{{ message }}</li>
+	        	{% endfor %}
+	        </ul>
+	      	{% endif %}
+    	{% endwith %}
+
+
 	{% endblock %}
