--- a/flask_app/web_package/templates/question_list.html
+++ b/flask_app/web_package/templates/question_list.html
@@ -8,7 +8,7 @@
 	{% if questions %}
 		<ul>
 		{% for question in questions %}
-			<li><a href="{{ url_for('question_view', id=question.question_id) }}">{{ question.title }}</a></li>
+			<li><a href="{{ url_for('question_show', id=question.question_id) }}">{{ question.title }}</a></li>
 		{% endfor %}
 		</ul>
 	{% else %}
