--- a/flask_app/web_package/templates/base.html
+++ b/flask_app/web_package/templates/base.html
@@ -38,6 +38,7 @@
     <script src="{{url_for('static', filename='bootstrap/js/bootstrap.js')}}"></script>
     <script type="text/javascript">
       SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+      USERNAME = {{ session['username'] }}
     </script>
     {% block scripts_extra %}
     {% endblock%}
