Reorganized application structure and import orders to switch to using Flask blueprints to implement django-like apps

--- a/app_pkg/blueprints/web_pkg/templates/index.html
+++ b/app_pkg/blueprints/web_pkg/templates/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <div class="pull-right span4">
-      <form action="{{ url_for('user_login') }}" method="POST">
+      <form action="{{ url_for('web.user_login') }}" method="POST">
         <input class="span2" type="text" placeholder="Email" name="username" autofocus>
         <br>
         <input class="span2" type="password" placeholder="Password" name="password">
@@ -27,7 +27,7 @@
         <button type="submit" class="btn">Login</button>
       </form>
 
-      <a href="{{url_for('user_new')}}" class="btn">Sign up</a>
+      <a href="{{url_for('web.user_new')}}" class="btn">Sign up</a>
     </div>
 
     {% with messages = get_flashed_messages() %}
