--- a/app_pkg/blueprints/web_pkg/templates/user_new.html
+++ b/app_pkg/blueprints/web_pkg/templates/user_new.html
@@ -5,7 +5,7 @@
 		{{ super() }}
 
 		<div class="container">
-			<form action="{{url_for('user_new')}}" method="POST">
+			<form action="{{url_for('web.user_new')}}" method="POST">
 				<legend>Sign up for CodeBlue</legend>
 				<label>username</label>
 				<input type="text" name="username">
