--- a/app_pkg/blueprints/web_pkg/templates/question_show.html
+++ b/app_pkg/blueprints/web_pkg/templates/question_show.html
@@ -14,7 +14,7 @@
 		{% endfor %}
 
 		<div class="container">
-			<form action="{{url_for('comment_new')}}" method="POST">
+			<form action="{{url_for('web.comment_new')}}" method="POST">
 				<legend>Create a New Comment</legend>
 				<label for="answer_text">Comment</label>
 				<textarea id="comment_text" name="text" rows="5" cols="25" placeholder="Please enter your answer here"></textarea>
@@ -26,7 +26,7 @@
 
 		<h1>Answers</h1>
 		<div class="container">
-			<form action="{{url_for('answer_new')}}" method="POST">
+			<form action="{{url_for('web.answer_new')}}" method="POST">
 				<legend>Create a New Answer</legend>
 				<label for="answer_text">Your Answer</label>
 				<textarea id="answer_text" name="text" rows="5" cols="25" placeholder="Please enter your answer here"></textarea>
@@ -49,7 +49,7 @@
 			{% endfor %}
 
 			<div class="container">
-			<form action="{{url_for('comment_new')}}" method="POST">
+			<form action="{{url_for('web.comment_new')}}" method="POST">
 				<legend>Create a New Comment</legend>
 				<label for="answer_text">Comment</label>
 				<textarea id="comment_text" name="text" rows="5" cols="25" placeholder="Please enter your answer here"></textarea>
