--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -1,48 +1,84 @@
 <!DOCTYPE html>
+<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
+<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
+<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
+<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <title>{% block title %} Default Title {% endblock %}</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no">
-    <meta name="description" content="">
-    <meta name="author" content="">
+    <head>
+        {% block head %}
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+        <title>{% block title %}Title{% endblock title %}</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="">
+        <meta name="author" content="">
 
-    {% block head_extra %}
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.css')}}">
-    <style type="text/css">
-      body {
-        padding-top: 60px;
-        padding-bottom: 40px;
-      }
-    </style>
-    <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap-responsive.css')}}">
-    {% endblock %}
+        {% block head_styles %}
+        <!-- Head Styles -->
+        <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap.min.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='vendor/bootstrap/css/bootstrap-responsive.min.css')}}">
+        <link rel="stylesheet" href="{{url_for('static', filename='css/base.css')}}">
+        {% endblock head_styles %}
+        
+        {% block head_scripts %}
+        <!-- Head Scripts -->
+        <script src="{{url_for('static', filename='vendor/modernizr/modernizr-2.6.2.min.js')}}"></script>
+        {% endblock head_scripts %}
 
-    <!-- HTML5 Shims -->
-    <!--[if lt IE 9]>
-      <script src="http://html5shim.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+        <!-- Favicon and touch icons -->
+        <link rel="shortcut icon" href="{{url_for('static', filename='img/favicon.png')}}">
+        <link rel="apple-touch-icon-precomposed" href="{{url_for('static', filename='img/touch.png')}}">
 
-  </head>
+        {% endblock head %}        
+    </head>
 
-  <body>
+    <body>
+        {% block body %}
+        <div id="wrap">
+            {% include 'navbar.html' %}
+            
+            {% block content %}
+            <div class="container">
 
-    {% block body %}
-    {% include 'navbar.html' %}
-    {% endblock %}
+            {% endblock content %}
+            <!-- End of container -->
+            </div>
 
-    {% include 'footer.html' %}
+            <div id="push"></div>
+        </div><!--End Wrap-->
 
-    <!-- Scripts -->
-    <script src="http://code.jquery.com/jquery-latest.js"></script>
-    <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.js')}}"></script>
-    <script type="text/javascript">
-      SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-      USERNAME = {{ session['username'] }}
-    </script>
-    {% block scripts_extra %}
-    {% endblock%}
+        {% block footer %}
+        <div id="footer">
+            <footer id="footer">
+                <div class="row">
+                    <div class="span4 offset1">
+                        <p>
+                        <a href="#">Your Tale</a> &copy; Copyright 2013 
+                        </p>
+                    </div>
+                    <div class="span4 offset3">
+                        <a href="/about">About</a> &middot;
+                        <a href="/contact">Contact</a> &middot; 
+                        <a href="/faq">FAQ</a> &middot;  
+                        <a href="/privacy">Privacy Policy</a> 
+                    </div>
+                </ul>
+            </footer>
+        </div>
+        {% endblock footer %}
 
-  </body>
-  
+        {% endblock body %}
+
+        
+        {% block tail_scripts %}
+        <!-- Tail Scripts -->
+        <script src="http://code.jquery.com/jquery-latest.js"></script>
+        <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js')}}"></script>
+        <script>
+            SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
+            GOOGLE_API_KEY = "{{ GOOGLE_API_KEY }}"
+            console.log(SCRIPT_ROOT);
+        </script>
+        {% endblock tail_scripts %}        
+    </body>
 </html>
