--- a/app_pkg/blueprints/web/templates/index.html
+++ b/app_pkg/blueprints/web/templates/index.html
@@ -24,17 +24,33 @@
 
   <div id="map_region"></div>
 
-  <a href="{{ url_for('web.user_new') }}">Create an Account Now</a>
+  
   <br>
-  <a href="{{ url_for('web.user_login') }}">Login</a>
+  <a href="{{ url_for('web.login') }}">Login</a>
 
-  <form action="{{ url_for('web.user_login') }}" method="POST">
-    <input class="span2" type="text" placeholder="Email" name="username" autofocus>
+  <form action="{{ url_for('web.login') }}" method="POST">
+    <label for="login_user_identifier">Username or Email</label>
+    <input id="login_user_identifier" class="span2" type="text" name="user_identifier" autofocus>
     <br>
-    <input class="span2" type="password" placeholder="Password" name="password">
+    <label for="login_password">Password</label>
+    <input id="login_password" class="span2" type="password" name="password">
     <br>
     <button type="submit" class="btn">Login</button>
   </form>
+
+  <a href="{{ url_for('web.signup') }}">Create an Account Now</a>
+  <div class="container">
+      <form action="{{url_for('web.signup')}}" method="POST">
+        <legend>Sign up for CodeBlue</legend>
+        <input type="text" name="username" placeholder="Choose a username">
+        <br>
+        <input type="email" name="email" placeholder="Your email">
+        <br>
+        <input type="password" name="password" placeholder="Create a password">
+        <br>
+        <button type="submit" class="btn">Sign Up</button>
+      </form>
+    </div>
 
 {% endblock content %}
 
