Cleaned up the web interface to have more intuitive client facing routes. Templates all use the new base and navbar templates. Login required in place on web interface views requiring a login. Redirection to the index page where users can login occurs if user fails the login session check.

--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -57,10 +57,10 @@
                         </p>
                     </div>
                     <div class="span4 offset3">
-                        <a href="/about">About</a> &middot;
-                        <a href="/contact">Contact</a> &middot; 
-                        <a href="/faq">FAQ</a> &middot;  
-                        <a href="/privacy">Privacy Policy</a> 
+                        <a href="{{url_for('web.about')}}">About</a> &middot;
+                        <a href="{{url_for('web.contact')}}">Contact</a> &middot; 
+                        <a href="{{url_for('web.faq')}}">FAQ</a> &middot;  
+                        <a href="{{url_for('web.privacy')}}">Privacy Policy</a> 
                     </div>
                 </ul>
             </footer>
