--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -53,7 +53,7 @@
                 <div class="row">
                     <div class="span4 offset1">
                         <p>
-                        <a href="#">Your Tale</a> &copy; Copyright 2013 
+                        <a href="#">Code Blue</a> &copy; Copyright 2013 
                         </p>
                     </div>
                     <div class="span4 offset3">
