Added ROOT_ADDRESS environment variable for greater consistency. Note that this differs from the SCRIPT_ROOT template context variable. Separated the context processors into the web blueprint since they are needed for the web component rather than the entire application. Variable values are read from the environment when running through the default config. README was updated to reflect new env vars. Modified the database to include the profile_image_url field which is populated with a gravatar url defaulting to identicons if no custom image is available.

--- a/app_pkg/blueprints/web/templates/base.html
+++ b/app_pkg/blueprints/web/templates/base.html
@@ -76,7 +76,8 @@
         <script src="{{url_for('static', filename='vendor/bootstrap/js/bootstrap.min.js')}}"></script>
         <script>
             SCRIPT_ROOT = {{ request.script_root|tojson|safe }};
-            GOOGLE_API_KEY = "{{ GOOGLE_API_KEY }}"
+            ROOT_ADDRESS = "{{ ROOT_ADDRESS }}";
+            GOOGLE_API_KEY = "{{ GOOGLE_API_KEY }}";
             console.log(SCRIPT_ROOT);
         </script>
         {% endblock tail_scripts %}        
