Modified web interface routes and controllers to have a clean separation between the question_list and question_show, with templates for each. Added minified Underscore 1.4.3 and minified Backbone 0.9.10 and included them in the tail_scripts of the base.html template.

--- a/app_pkg/blueprints/web/templates/navbar.html
+++ b/app_pkg/blueprints/web/templates/navbar.html
@@ -40,7 +40,7 @@
           <form class="navbar-search">
             <input type="text" class="span2 search-query" placeholder="Search">
           </form>
-          <li><a href="{{ url_for('web.questions') }}">Browser Questions</a></li>
+          <li><a href="{{ url_for('web.question_list') }}">Browser Questions</a></li>
           <li><a href="{{ url_for('web.ask') }}">Ask</a></li>
           {% endif %}
         </ul>
