--- a/app_pkg/blueprints/web/templates/question_show.html
+++ b/app_pkg/blueprints/web/templates/question_show.html
@@ -8,7 +8,7 @@
 
 {% block head_styles %}
   {{ super() }}
-    <link rel="stylesheet" href="{{url_for('static', filename='css/questions.css')}}">
+    <link rel="stylesheet" href="{{url_for('static', filename='css/question_show.css')}}">
 {% endblock %}
 
 {% block head_scripts %}
@@ -20,7 +20,7 @@
 {% block content %}
   {{ super() }}
 
-  <p>Questions Page</p>
+  <p>Question {{custom_vars.question_id}}</p>
 
 {% endblock content %}
 
@@ -30,5 +30,5 @@
 
 {% block tail_scripts %}
     {{ super() }}
-<script data-main="{{url_for('static', filename='js/questions.js')}}" src="{{url_for('static', filename='js/require.js')}}"></script>
+<script data-main="{{url_for('static', filename='js/question_show.js')}}" src="{{url_for('static', filename='js/require.js')}}"></script>
 {% endblock tail_scripts %}
