--- a/app_pkg/blueprints/web/templates/index.html
+++ b/app_pkg/blueprints/web/templates/index.html
@@ -50,6 +50,9 @@
     <label for="login_password">Password</label>
     <input id="login_password" class="span2" type="password" name="password">
     <br>
+    {% if custom_vars.next %}
+    <input type="hidden" name="next" value="{{ custom_vars.next }}">
+    {% endif %}
     <button type="submit" class="btn">Login</button>
   </form>
 
